swapped some images, added momentjs

--- a/public/index.html
+++ b/public/index.html
@@ -87,12 +87,10 @@
             <h2>Learn about the health impacts of lead in your drinking water</h2>
             <div class="row">
                 <div class="col span-1-of-2 box">
-                    <h3>How lead gets into drinking water</h3>
-                    <img src="css/images/lead-into-water.png" alt="How lead gets into drinking water">
+                    <img src="css/images/Lead-Pipe-Info%20Graphics.png" alt="How lead gets into drinking water">
                 </div>
                 <div class="col span-1-of-2 box">
-                    <h3>The health impacts of lead</h3>
-                    <img src="css/images/health-impacts.png" alt="Health impacts of lead in drinking water">
+                    <img src="css/images/Lead-Health-Graphics.png" alt="Health impacts of lead in drinking water">
                 </div>
             </div>
             <a class="btn btn-full scroll" href="#next-steps">Next Steps</a>
@@ -102,7 +100,7 @@
             <h2>Follow these steps to test your water and share your results</h2>
             <div class="row">
                 <div class="col span-1-of-4 box">
-                    <img src="css/images/next-step-dummy-img.jpg" alt="Placeholder Image">
+                    <img src="css/images/first-step-image.jpg" alt="A glass of water">
                     <h3>Order your test kit</h3>
                     <a href="http://www.chicagowaterquality.org/index.html" target="_blank">Chicago Water Quality</a>
                 </div>
@@ -115,7 +113,7 @@
                     <h3>Enter your data &amp; compare</h3>
                 </div>
                 <div class="col span-1-of-4 box">
-                    <img src="css/images/next-step-dummy-img4.jpg" alt="Placeholder Image">
+                    <img src="css/images/fourth-step-image.jpg" alt="Image of Chicago and Lake Michigan">
                     <h3>Get Involved</h3>
                 </div>
             </div>
