--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <header id="home" role="banner">
         <nav role="navigation">
             <div class="row">
-                <h1 class="logo">Community Water</h1>
+                <h1 class="logo">Clean Water Allies</h1>
                 <ul class="main-nav">
                     <li class="signup"><a href="#">Sign Up</a></li>
                     <li class="login"><a href="#">Login</a></li>
@@ -29,7 +29,8 @@
             </div>
         </nav>
         <div class="hero-text-box">
-            <h1>Protect your Drinking Water <br> Learn &rsaquo; Test &rsaquo; Share</h1>
+            <h1>Protect your Drinking Water <br>
+                Join us as a Clean Water Ally <br><br> Learn &rsaquo; Test &rsaquo; Share</h1>
             <a class="btn btn-full scroll" href="#learn-more">Learn More</a>
         </div>
     </header>
@@ -84,7 +85,7 @@
 
     <main role="main" class="hide-everything" id="landing-page">
         <section id="learn-more" class="learn-more">
-            <h2>Learn about the health impacts of lead in your drinking water</h2>
+            <h2>Drinking Water Basics - Lead</h2>
             <div class="row">
                 <div class="col span-1-of-2 box">
                     <img src="css/images/Lead-Pipe-Info%20Graphics.png" alt="How lead gets into drinking water">
@@ -93,16 +94,15 @@
                     <img src="css/images/Lead-Health-Graphics.png" alt="Health impacts of lead in drinking water">
                 </div>
             </div>
-            <a class="btn btn-full scroll" href="#next-steps">Next Steps</a>
+            <a class="btn btn-full scroll" href="#next-steps">Become an Ally</a>
         </section>
 
         <section id="next-steps" class="next-steps">
-            <h2>Follow these steps to test your water and share your results</h2>
+            <h2>Follow these steps to become an ally <br>Test your water and share your results</h2>
             <div class="row">
                 <div class="col span-1-of-4 box">
                     <img src="css/images/first-step-image.jpg" alt="A glass of water">
-                    <h3>Order your test kit</h3>
-                    <a href="http://www.chicagowaterquality.org/index.html" target="_blank">Chicago Water Quality</a>
+                    <h3><a href="http://www.chicagowaterquality.org/index.html" target="_blank">Order your test kit</a></h3>
                 </div>
                 <div class="col span-1-of-4 box">
                     <img src="css/images/next-step-dummy-img2.jpg" alt="Placeholder Image">
