added more copy and new images.  deleted old images no longer using

--- a/public/index.html
+++ b/public/index.html
@@ -87,8 +87,21 @@
         <section id="learn-more" class="learn-more">
             <h2>Drinking Water Basics - Lead</h2>
             <div class="row">
+                <p class="long-copy">Clean Water Allies hopes to provide a space that allows anyone who is interested in learning about Chicago’s drinking water a way to explore existing water quality data and report and map their own water testing results.</p>
+                <p class="long-copy">We want everyone to have the tools and information needed to be educated, engaged, and empowered so that we can all work together to keep our communities healthy and safe.
+                </p>
+            </div>
+            <div class="row">
                 <div class="col span-1-of-2 box">
                     <img src="css/images/Lead-Pipe-Info%20Graphics.png" alt="How lead gets into drinking water">
+                </div>
+                <div class="col span-1-of-2 box">
+                    <img src="css/images/Lead-Health-Graphics.png" alt="Health impacts of lead in drinking water">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-2 box">
+                    <img src="css/images/lead-exposure-reduction.png" alt="Lead exposure reduction">
                 </div>
                 <div class="col span-1-of-2 box">
                     <img src="css/images/Lead-Health-Graphics.png" alt="Health impacts of lead in drinking water">
