added links to the bottom of signup and login forms - links take user to opposite form depending on if they are registered already or not

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,9 @@
                         <label for="login-password">Password</label>
                         <input type="password" name="password" id="login-password" placeholder="Enter Password" value="demo123" required>
                         <button type="submit" id="login-button">Log In</button>
+                        <br>
+                        <br>
+                        <span>Need to <a href="" id="change-form-signup">Signup</a> ?</span>
                     </fieldset>
                 </form>
             </div>
@@ -75,6 +78,10 @@
                         <label for="confirm-password">Confirm Password</label>
                         <input type="password" name="confirm-password" id="confirm-password" placeholder="Confirm Password" value="demo123" required>
                         <button type="submit" id="signup-button">Sign Up</button>
+                        <br>
+                        <br>
+                        <span>Have an account? <a href="" id="change-form-login">Login</a></span>
+
                     </fieldset>
                 </form>
             </div>
@@ -123,11 +130,11 @@
                 </div>
                 <div class="col span-1-of-4 box">
                     <img src="css/images/next-step-dummy-img3.jpg" alt="Placeholder Image">
-                    <h3>Enter your data &amp; compare</h3>
+                    <h3>Enter water data &amp;<br> Explore our map</h3>
                 </div>
                 <div class="col span-1-of-4 box">
                     <img src="css/images/fourth-step-image.jpg" alt="Image of Chicago and Lake Michigan">
-                    <h3>Get Involved</h3>
+                    <h3><a href="http://www.freshwaterlab.org/" target="_blank">Learn about Freshwater &amp;<br> the Great Lakes</a></h3>
                 </div>
             </div>
         </section>
