added button for Exlore our Map - on click it takes user to signup form -- also added some additional styling to forms

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
             <h1>Protect your Drinking Water <br>
                 Join us as a Clean Water Ally <br><br> Learn &rsaquo; Test &rsaquo; Share</h1>
             <a class="btn btn-full scroll" href="#learn-more">Learn More</a>
+            <a class="btn btn-full explore" href="">Explore our Map</a>
         </div>
     </header>
 
@@ -53,7 +54,7 @@
                         <button type="submit" id="login-button">Log In</button>
                         <br>
                         <br>
-                        <span>Need to <a href="" id="change-form-signup">Signup</a> ?</span>
+                        <div class="change-form">Need to <a href="" id="change-form-signup">Signup</a> ?</div>
                     </fieldset>
                 </form>
             </div>
@@ -80,7 +81,7 @@
                         <button type="submit" id="signup-button">Sign Up</button>
                         <br>
                         <br>
-                        <span>Have an account? <a href="" id="change-form-login">Login</a></span>
+                        <div class="change-form">Have an account? <a href="" id="change-form-login">Login</a></div>
 
                     </fieldset>
                 </form>
