added one more graphic for Learn More section

--- a/public/index.html
+++ b/public/index.html
@@ -109,10 +109,10 @@
             </div>
             <div class="row">
                 <div class="col span-1-of-2 box">
-                    <img src="css/images/lead-exposure-reduction.png" alt="Lead exposure reduction">
+                    <img src="css/images/lead-safe-graphic.png" alt="Lead Safety Graphic">
                 </div>
                 <div class="col span-1-of-2 box">
-                    <img src="css/images/Lead-Health-Graphics.png" alt="Health impacts of lead in drinking water">
+                    <img src="css/images/lead-exposure-reduction.png" alt="Lead exposure reduction">
                 </div>
             </div>
             <a class="btn btn-full scroll" href="#next-steps">Become an Ally</a>
