CRUD Delete connection with ajax is complete, delete results not yet verified

--- a/public/index.html
+++ b/public/index.html
@@ -307,6 +307,7 @@
                         <button>&times;</button>
                     </div>
                     <div class="delete-form">
+                        <input type="hidden" class="recent-id" value="">
                         <button type="submit" id="delete-button">Confirm</button>
                     </div>
                 </div>
