--- a/public/index.html
+++ b/public/index.html
@@ -172,6 +172,16 @@
                                 <li>Last Updated: <span class="lastUpdated"></span></li>
                             </ul>
                         </div>
+
+                        <div class="crud-results">
+                            <h4 class="user-landing">Add your data to see your results</h4>
+                            <div class="col span-2-of-2 edit-results">
+                                <a class="btn btn-full add-results" href="#add-results">Add</a>
+                                <a class="btn btn-full update-results" href="#update-results">Update</a>
+                                <a class="btn btn-full delete-results" href="#delete-results">Delete</a>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
                 <div class="col span-1-of-2">
@@ -198,6 +208,7 @@
                             </ul>
                         </div>
 
+                        <!--
                         <div class="crud-results">
                             <h4 class="user-landing">Add your data to see your results</h4>
                             <div class="col span-2-of-2 edit-results">
@@ -206,6 +217,7 @@
                                 <a class="btn btn-full delete-results" href="#delete-results">Delete</a>
                             </div>
                         </div>
+-->
                     </div>
                 </div>
             </div>
@@ -317,6 +329,7 @@
 
         <section class="map">
             <h3>Compare your results with your neighbors</h3>
+            <p class="no-map">Add your results to see our map.</p>
             <div class="map-container">
                 <div id='map' class="map"></div>
             </div>
