added password strength jquery/css for signup form

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
                         <legend>Signup Form</legend>
                         <label for="signup-username">Username</label>
                         <input type="text" name="username" id="signup-username" placeholder="Enter Username" value="demo" required>
-                        <label for="signup-password">Password</label>
+                        <label for="signup-password">Password<span id="password-strength"></span></label>
                         <input type="password" name="password" id="signup-password" placeholder="Enter Password" value="demo123" required>
                         <label for="confirm-password">Confirm Password</label>
                         <input type="password" name="confirm-password" id="confirm-password" placeholder="Confirm Password" value="demo123" required>
