added links to the results review based on users results average

--- a/public/index.html
+++ b/public/index.html
@@ -195,20 +195,20 @@
                         </div>
                         <!-- Show green-results if average is below 1.0-->
                         <div class="green-results hide-everything" aria-live="assertive">
-                            <h4>Your results are below threshold</h4>
+                            <h4>Your results are below threshold</h4><br>
                             <ul>
-                                <li><a href="">Link One</a></li>
-                                <li><a href="">Link Two</a></li>
-                                <li><a href="">Link Three</a></li>
+                                <li><a href="http://freshwaterstories.com/stories/lead/">Learn About the History of Lead in Water</a></li><br>
+                                <li><a href="https://www.waterfilterdata.org/best-nsf-certified-water-filter/">Find a NSF 53 Certified Lead Filter for Your Home</a></li><br>
+                                <li><a href=" https://www.cityofchicago.org/city/en/depts/mayor/iframe/lookup_ward_and_alderman.html">Contact Your Alderman About Your Concerns</a></li>
                             </ul>
                         </div>
                         <!-- Show red-results if average is above 1.0-->
                         <div class="red-results hide-everything" aria-live="assertive">
-                            <h4>Your results are above threshold</h4>
+                            <h4>Your results are above threshold</h4><br>
                             <ul>
-                                <li><a href="">Link One</a></li>
-                                <li><a href="">Link Two</a></li>
-                                <li><a href="">Link Three</a></li>
+                                <li><a href="https://www.waterfilterdata.org/best-nsf-certified-water-filter/">Find a NSF 53 Certified Lead Filter for Your Home</a></li><br>
+                                <li><a href=" https://www.cityofchicago.org/city/en/depts/mayor/iframe/lookup_ward_and_alderman.html">Contact Your Alderman About Your Concerns</a></li><br>
+                                <li><a href="http://freshwaterstories.com/stories/lead/">Learn About the History of Lead in Water</a></li>
                             </ul>
                         </div>
                     </div>
