added about page, made copy and png edits for info content

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <header id="home" role="banner">
         <nav role="navigation">
             <div class="row">
-                <h1 class="logo">Clean Water Allies</h1>
+                <h1 class="logo">Clean Water Allies - BETA</h1>
                 <ul class="main-nav">
                     <li class="signup"><a href="#">Sign Up</a></li>
                     <li class="login"><a href="#">Login</a></li>
@@ -30,8 +30,9 @@
             </div>
         </nav>
         <div class="hero-text-box">
-            <h1>Protect your Drinking Water <br>
-                Join us as a Clean Water Ally <br><br> Learn &rsaquo; Test &rsaquo; Share</h1>
+            <h1>We Want to Educate, Engage, and Empower Everyday Citizens <br> with Information about Chicago's Drinking Water
+                <br>Collect Samples from Your Tap and Contribute to Our Map <br><br>
+                Join us as a Clean Water Ally <br><br> Learn &rsaquo; Collect &rsaquo; Share</h1>
             <a class="btn btn-full scroll" href="#learn-more">Learn More</a>
             <a class="btn btn-full explore" href="">Explore our Map</a>
         </div>
@@ -329,12 +330,53 @@
         </section>
 
     </main>
+
+    <section id="about-us" class="about-us hide-everything">
+        <div class="about-wrapper">
+            <div class="about-close">
+                <button>&times;</button>
+            </div>
+            <div class="row about-title">
+                <h2>About Us</h2>
+            </div>
+            <h4 class="bio-summary">Clean Water Allies is a collaborative project between Jen and her husband Matt. This site was developed as part of the Freshwater Lab coursework, which is currently offered through the University of Illinois- Chicago. The Freshwater Lab is an initiative to communicate Great Lakes water issues to the general public, create tools to visualize the current state and future scenarios of water sources, engage unaffiliated groups in water planning, and train a new generation of Great Lakes leaders.
+                <br>For more information, including other student work and upcoming water events please visit: <a href="http://www.freshwaterlab.org/" target="_blank">freshwaterlab.org</a>
+                <br>Please contact us with your thoughts or questions about Chicago drinking water at <a href="mailto:cleanwaterallies@gmail.com">cleanwaterallies@gmail.com</a>
+            </h4>
+            <div class="row">
+                <div class="col span-1-of-2 box person-bio">
+                    <div class="person-photo">
+                        <img src="/public/css/images/jen-jenkins.jpg" alt="Jen Jenkins">
+                    </div>
+                    <div class="person-content">
+                        <h2 class="person-name">Jennifer Jenkins</h2>
+                        <h3 class="person-role">Founder and Creative Director</h3>
+                        <p>As Founder and Creative Director, Jen does everything from project management, social media, sampling training, outreach, and web design; she even provides quality assurance of the data you submit to the map. She has a degree in civil engineering from the University of Virginia and has worked for the past twelve years as a water resource engineer with an local environmental consulting firm, working on remediation and planning issues around the country. <br><br>
+                            Jen is also a student in the Urban Planning and Policy program at the University of Illinois - Chicago and hopes to engage communities in the practices of urban stewardship so that we build and maintain livable, resilient and sustainable communities. She believes citizen science is the future of freshwater advocacy and research and hopes you will join her in her mission to keep our drinking water healthy, safe and affordable for all. When not thinking about Great Lakes water quality and water issues, you can find her planning her native backyard garden at her home in Logan Square. </p>
+                    </div>
+                </div>
+                <div class="col span-1-of-2 box person-bio">
+                    <div class="person-photo">
+                        <img src="/public/css/images/matt-coppola.png" alt="Matt Coppola">
+                    </div>
+                    <div class="person-content">
+                        <h2 class="person-name">Matt Coppola</h2>
+                        <h3 class="person-role">Lead Developer</h3>
+                        <p>By day Matt utilizes his skills and experiences in warehouse logistics, advanced exchange project management and large scale equipment deployments. He has worked in a wide range of industries: grocery/retail, transportation, healthcare, arts &amp; crafts, and barcodes solutions &amp; mobile computing.
+                            <br><br>By night he is an aspiring Full stack JavaScript developer with Thinkful/Bloc, gaining experience everyday using Mongo/Node/Express/React to build web apps and looking to make a positive impact in our society with these new skills.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer role="contentinfo">
         <a class="btn btn-full scroll" href="#home">Back to top</a>
         <div class="row">
-            <a href="#">About Us</a>
+            <a class="aboutUs" href="#">About Us</a>
             <ul class="social-links">
                 <li><a href="https://github.com/mattCoppola" target="_blank"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://www.facebook.com/cleanwaterallies/" target="_blank"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
