added a slight blur to hero-text-box for better readability

--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,12 @@
             </div>
         </nav>
         <div class="hero-text-box">
-            <h1>We Want to Educate, Engage, and Empower Everyday Citizens <br> with Information about Chicago's Drinking Water
+            <div class="hero-blur">
+               <h1>We Want to Educate, Engage, and Empower Everyday Citizens <br> with Information about Chicago's Drinking Water
                 <br>Collect Samples from Your Tap and Contribute to Our Map <br><br>
-                Join us as a Clean Water Ally <br><br> Learn &rsaquo; Collect &rsaquo; Share</h1>
+                Join us as a Clean Water Ally <br><br> Learn &rsaquo; Collect &rsaquo; Share
+                </h1>
+            </div>
             <a class="btn btn-full scroll" href="#learn-more">Learn More</a>
             <a class="btn btn-full explore" href="">Explore our Map</a>
         </div>
