fixed path for aboutme images

--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
         </nav>
         <div class="hero-text-box">
             <div class="hero-blur">
-               <h1>We Want to Educate, Engage, and Empower Everyday Citizens <br> with Information about Chicago's Drinking Water
-                <br>Collect Samples from Your Tap and Contribute to Our Map <br><br>
-                Join us as a Clean Water Ally <br><br> Learn &rsaquo; Collect &rsaquo; Share
+                <h1>We Want to Educate, Engage, and Empower Everyday Citizens <br> with Information about Chicago's Drinking Water
+                    <br>Collect Samples from Your Tap and Contribute to Our Map <br><br>
+                    Join us as a Clean Water Ally <br><br> Learn &rsaquo; Collect &rsaquo; Share
                 </h1>
             </div>
             <a class="btn btn-full scroll" href="#learn-more">Learn More</a>
@@ -349,7 +349,7 @@
             <div class="row">
                 <div class="col span-1-of-2 box person-bio">
                     <div class="person-photo">
-                        <img src="/public/css/images/jen-jenkins.jpg" alt="Jen Jenkins">
+                        <img src="/css/images/jen-jenkins.jpg" alt="Jen Jenkins">
                     </div>
                     <div class="person-content">
                         <h2 class="person-name">Jennifer Jenkins</h2>
@@ -360,7 +360,7 @@
                 </div>
                 <div class="col span-1-of-2 box person-bio">
                     <div class="person-photo">
-                        <img src="/public/css/images/matt-coppola.png" alt="Matt Coppola">
+                        <img src="/css/images/matt-coppola.png" alt="Matt Coppola">
                     </div>
                     <div class="person-content">
                         <h2 class="person-name">Matt Coppola</h2>
